--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <script src="http://cdn.bootcss.com/jquery/2.2.1/jquery.js"></script>
   <script src="js/marked.js"></script>
   <script>
-    $.getJSON('resume.md').then(function(data) {
+    $.get('resume.md').then(function(data) {
       $('#main_content').html(marked(data));
     })
   </script>
