a group of zombies

--- a/react/index.html
+++ b/react/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8"/>
 	<title>React Test</title>
-	<meta name="viewport" content="width=device-width,initial-scale=1, user-scalable=false">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="http://bower.yizhi.com/bootstrap3/dist/css/bootstrap.css">
 	<link rel="stylesheet" href="http://bower.yizhi.com/bootstrap3/dist/css/bootstrap-theme.css">
     <link rel="shortcut icon" href="http://static.yizhi.com/img/yz48.png">
@@ -56,13 +56,6 @@
 						<!-- <li class="list-group-item">新技术，面向未来，后台硬，逼格高</li> -->
 					</ol>
 				</div>
-				<!-- <div class="panel panel-danger">
-					<p class="panel-heading">Disadvantage:</p>
-					<ol class="list-group">
-						<li class="list-group-item">新技术, </li>
-						<li class="list-group-item">新技术</li>
-					</ol>
-				</div> -->
 				<div class="panel panel-default">
 					<div class="panel-heading">Tips</div>
 					<div class="panel-body">
@@ -75,7 +68,7 @@
 		</div>
 	</div>
 </body>
- <script src="http://bower.yizhi.com/react/react.js"></script>
+ <!-- <script src="http://bower.yizhi.com/react/react.js"></script> -->
 <!--<script src="http://bower.yizhi.com/react/react-with-addons.js"></script>-->
 <!--<script src="http://bower.yizhi.com/react/react-dom.js"></script>-->
 <!--<script src="http://bower.yizhi.com/classnames/index.js"></script>-->
@@ -83,5 +76,5 @@
 <script src="http://bower.yizhi.com/jquery/dist/jquery.js"></script>
 <!-- <script src="http://bower.yizhi.com/requirejs/require.js"></script> -->
 <!-- <script type="text/jsx" src="./components.jsx"></script> -->
-<script type="text/javascript" src="./dist/app.js"></script>
+<script type="text/javascript" src="http://localhost:3000/dist/app.js"></script>
 </html>
