--- a/index.html
+++ b/index.html
@@ -4,22 +4,28 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Adonlee.GitHub.com : my github pages">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" type="text/css" media="screen" href="css/stylesheet.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="shortcut icon" href="img/icon/yz_logo_100.png">
     <title>Adonlee.GitHub.com</title>
+
   </head>
   <body>
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
       <header class="inner">
-        <a id="forkme_banner" href="https://github.com/AdonLee">View on GitHub</a>
+        <a id="forkme_banner" href="https://github.com/AdonLee">View on GayHub</a>
         <h1 id="project_title">李策东 男 3年工作经验 本科</h1>
         <h2 id="project_tagline">轻度代码洁癖，追求模块化、规范化、文档化</h2>
       </header>
     </div>
+
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-      </section>
+        <section id="main_content" class="inner">
+            <div class="loading loading-ring"></div>
+        </section>
     </div>
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
@@ -28,14 +34,20 @@
       </footer>
     </div>
   </body>
-  <script src="http://cdn.bootcss.com/jquery/2.2.1/jquery.js"></script>
-  <script src="js/marked.js"></script>
+  <script src="//cdn.bootcss.com/jquery/2.2.1/jquery.js"></script>
+  <!-- <script src="vendor/marked/marked.min.js"></script> -->
+  <script src="//cdn.bootcss.com/marked/0.3.6/marked.js"></script>
   <script>
   $(function() {
 
-    $.get('resume.md').then(function(data) {
-      $('#main_content').html(marked(data));
-    })
+    $.get('data/resume.md')
+        .then(function(data) {
+          $('#main_content').html(window.marked(data));
+          location.href = '#main_content'
+        })
+        .fail(function(err) {
+            $('#main_content').text('Fail to load resume, Please try to refresh again!')
+        })
   })
   </script>
 </html>
