a group of zombies

--- a/angular.html
+++ b/angular.html
@@ -108,6 +108,9 @@
             </section>
         </form>
     </div>
+    <div>
+        <a href="https://vsavkin.com/angular-2-template-syntax-5f2ee9f13c6a#.va1dkz1q3" title="Angular 2 Template Syntax">Angular 2 Template Syntax</a>
+    </div>
 </body>
 <script src="//bower.yizhi.com/angular/angular.js"></script>
 <script>
