--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div id="header_wrap" class="outer">
       <header class="inner">
         <a id="forkme_banner" href="https://github.com/AdonLee">View on GayHub</a>
-        <h1 id="project_title">李策东 男 3年工作经验 本科</h1>
-        <h2 id="project_tagline">轻度代码洁癖，追求模块化、规范化、文档化</h2>
+        <h1 id="project_title">李策东个人简历</h1>
+        <h2 id="project_tagline">Learn to copy and paste, better import</h2>
       </header>
     </div>
 
