a group of zombies

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/stylesheet.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="shortcut icon" href="img/icon/yz_logo_100.png">
+
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <link rel="apple-touch-icon" href="img/favorite.png">
+    <link rel="apple-touch-startup-image" href="img/favorite.png" media="all">
+    <meta name="apple-mobile-web-app-title" content="Resume">
+    <!-- <meta name="apple-mobile-web-app-status-bar-style" content="translucent black"> -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="translucent">
+    <meta name="format-detection" content="telephone=no">
     <title>Adonlee.GitHub.com</title>
 
   </head>
