--- a/react.html
+++ b/react.html
@@ -76,5 +76,5 @@
 <script src="http://bower.yizhi.com/jquery/dist/jquery.js"></script>
 <!-- <script src="http://bower.yizhi.com/requirejs/require.js"></script> -->
 <!-- <script type="text/jsx" src="./components.jsx"></script> -->
-<script type="text/javascript" src="dist/app.js"></script>
+<script type="text/javascript" src="dist/js/react.js"></script>
 </html>
