--- a/vue.html
+++ b/vue.html
@@ -3,154 +3,40 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0, user-scalable=no">
+    <title>Vue 2.x</title>
     <style>
-        .fade-transition {
+        /*.fade-enter-active {
             transition: opacity .5s ease, height 1s ease;
-            overflow: hidden;
-            /*opacity: 0*/
         }
-
+        .fade-leave-active {
+            transition: opacity .2s ease, height .5s ease;
+        }
         .fade-enter,
-        .fade-leave {
+        .fade-leave-active {
             opacity: 0;
             height: 0;
-        }
-        .list-group-item {
-            display: flex !important;
-        }
-        .list-group-item:first-child {
-            width: 40px
-        }
-        .list-group-item:first-child ~ div {
-            flex: 1;
-        }
+        }*/
     </style>
+    <!-- <link rel="stylesheet" href="//npm.yizhi.com/animate.css/animate.css"> -->
+    <!-- <link rel="stylesheet" href="//bower.yizhi.com/bootstrap/dist/css/bootstrap.css"></link> -->
+    <link rel="stylesheet" href="//cdn.bootcss.com/animate.css/3.5.2/animate.css">
+    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css"></link>
 </head>
 
 <body>
-    <div id="cart_wrapper" class="container">
-        <ul class="list-group">
-            <li class="list-group-item list-group-item-heading">
-                <div class=""><input type="checkbox" v-model="selectAll"></div>
-                <div class="list-group-item-text">Cart</div>
-            </li>
-            <li v-for="item in cart_items" class="list-group-item" :class="{'active': item.checked}">
-                <div><input type="checkbox" :value="item.id" v-model="item.checked"></div>
-                <div>
-                    <p draggable="true" @dragstart="item.alert='put me back'" @dragend="item.alert=''">{{item.alert || item.product_name}}</p>
-                    <input type="number" class="form-control" v-model="item.quantity">
-                    <span v-text="item.unit_price"></span>
-                </div>
-            </li>
-        </ul>
-        <div v-show="isKJG" transition="fade">
-            <div>
-                <label for="">姓名</label>
-                <input type="text" name="name" v-model="identify.name">
-            </div>
-            <div>
-                <label for="">身份证</label>
-                <input type="text" name="id_number" v-model="identify.id_number">
-            </div>
-            <div>
-                <label for="">邮箱</label>
-                <input type="text" name="email" v-model="identify.email">
-            </div>
-        </div>
-        <select name="" v-model="couponIndex">
-            <option value="-1">不使用</option>
-            <template v-for="(coupon, index) in coupons">
-            <option :value="index" v-text="coupon.desc"></option>
-            </template>
-        </select>
-        <div>
-            <p v-if="couponIndex > -1" transition="fade">代金券：-{{coupons[couponIndex].amount}}</p>
-            <p :draggable="true" v-on:dragstart="itemChange">总额：{{total}}</p>
-            <p :text-content.prop="total"></p>
+    <div id="cart_wrapper">
+        <div class="container-fluid">
+            <hotel :info="hotel"></hotel>
         </div>
     </div>
+
 </body>
 <!-- <script src="//bower.yizhi.com/vue/dist/vue.js"></script> -->
-<script src="//npm.yizhi.com/vue/dist/vue.js"></script>
-<!-- <link rel="stylesheet" href="//bower.yizhi.com/bootstrap/dist/css/bootstrap.css"></link> -->
+<!-- <script src="//npm.yizhi.com/vue/dist/vue.js"></script> -->
+<script src="//cdn.bootcss.com/vue/2.1.4/vue.js"></script>
+<script src="//cdn.bootcss.com/vuex/2.0.0/vuex.js"></script>
 <script src="./data/cart.js"></script>
-<script>
-    var cartData = window.cartData
-    var Vue = window.Vue
-    console.log(cartData);
-        // Vue.transition('fade', {
-        //   css: false,
-        //   enter: function (el, done) {
-        //     // 元素已被插入 DOM
-        //     // 在动画结束后调用 done
-        //     $(el)
-        //       .css('opacity', 0)
-        //       .animate({ opacity: 1 }, 1000, done)
-        //   },
-        //   enterCancelled: function (el) {
-        //     $(el).stop()
-        //   },
-        //   leave: function (el, done) {
-        //     // 与 enter 相同
-        //     $(el).animate({ opacity: 0 }, 1000, done)
-        //   },
-        //   leaveCancelled: function (el) {
-        //     $(el).stop()
-        //   }
-        // })
-        // var
-
-    cartData.coupons.forEach(coupon => {
-        coupon.desc = `${coupon.coupon_name}-${coupon.coupon_type}-${coupon.intro}`
-    })
-    cartData.cart_items.forEach((item, index) => {
-        item.checked = index == 0
-    })
-    var vm = new Vue({
-        el: '#cart_wrapper',
-        data: Object.assign(cartData, {
-            couponIndex: -1,
-            selectAll: false
-        }),
-        methods: {
-            itemChange: function(event) {
-                console.log(event.target.value);
-            },
-            isBusiTypeOf: function(type) {
-                var cart_items = this.cart_items.filter(item => item.checked)
-
-                for (var i = 0, l = cart_items.length; i < l; ++i) {
-                    if (cart_items[i].business_type == type) {
-                        return true;
-                    }
-                }
-                return false;
-            }
-        },
-        computed: {
-            total: function() {
-                var productValue = this.cart_items
-                    .filter(item => item.checked)
-                    .map(item => +item.unit_price * item.quantity)
-                    .reduce((item1, item2) => item1 + item2, 0)
-                if (!productValue) return 0;
-                if (this.couponIndex > -1) {
-                    var couponValue = +this.coupons[this.couponIndex].amount
-                    productValue -= couponValue
-                    if (productValue < 0) productValue = 0
-                }
-                return productValue
-            },
-            isKJG: function() {
-                return this.isBusiTypeOf('kuajing')
-            },
-            isOversea: function() {
-                return this.isBusiTypeOf('oversea')
-
-            }
-        }
-    })
-</script>
+<script src="./dist/js/vue.js"></script>
 
 </html>
