--- a/vue.html
+++ b/vue.html
@@ -26,8 +26,9 @@
 
 <body>
     <div id="cart_wrapper">
+        <my-body-component></my-body-component>
         <div class="container-fluid">
-            <hotel :info="hotel"></hotel>
+            <!-- <hotel :info="hotel"></hotel> -->
         </div>
     </div>
 
