a group of zoombies

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+
+<head>
     <meta charset="UTF-8">
     <title>Welcome to Adam's Page</title>
     <link rel="stylesheet" type="text/css" media="screen" href="css/stylesheet.css">
@@ -9,6 +10,7 @@
     <link rel="shortcut icon" href="img/icon/yz_logo_100.png">
     <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css"></link>
 </head>
+
 <body>
     <div id="header_wrap" class="outer">
         <header class="inner">
@@ -25,7 +27,7 @@
     <div class="row">
         <div class="container">
             <ul class="nav nav-pills">
-                <li><a href="/resume.html">Resume</a></li>
+                <li><a href="/resume.html#main_content">Resume</a></li>
                 <li><a href="/vue.html">Vue 2.x</a></li>
                 <li><a href="/react.html">React</a></li>
                 <li><a href="/angular.html">Angular 1.x</a></li>
@@ -42,4 +44,10 @@
         </div>
     </div>
 </body>
+
+<script src="//cdn.bootcss.com/vue/2.1.4/vue.js"></script>
+<script src="//cdn.bootcss.com/vue-router/2.2.0/vue-router.js"></script>
+<script src="//cdn.bootcss.com/marked/0.3.6/marked.js"></script>
+
+
 </html>
