--- a/react.html
+++ b/react.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8"/>
 	<title>React Test</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0, user-scalable=no">
-	<link rel="stylesheet" href="http://bower.yizhi.com/bootstrap3/dist/css/bootstrap.css">
-	<link rel="stylesheet" href="http://bower.yizhi.com/bootstrap3/dist/css/bootstrap-theme.css">
+    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css"></link>
+    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap-theme.min.css"></link>
     <link rel="shortcut icon" href="http://static.yizhi.com/img/yz48.png">
     <style>
 		.hide {
