--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="agd-partner-manual-verification" />
     <title>Welcome to Adam's Page</title>
     <link rel="stylesheet" type="text/css" media="screen" href="src/css/stylesheet.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0, user-scalable=no">
