--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,7 @@
 <body>
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
-        <header class="container">
+        <header class="inner">
             <a id="forkme_banner" href="https://github.com/AdonLee">View on GayHub</a>
             <h1 id="project_title">李策东个人简历</h1>
             <h2 id="project_tagline">Learn to copy and paste, better import</h2>
